Emacspeak News --History Of User-Visible Changes
$Id$
Author: T. V. Raman <raman@users.sf.net>

* Emacspeak 24.0 Additions And Changes:

Emacspeak 24.0 provides the following user level enhancements:

* user Visible Changes:

** emacspeak-m-player:

Updated for MPlayer release 1.0.

** emacspeak-sudoku.el:

Speech-enables sudoku.el --- the number placement SuDoku game.

** New Option: tts-strip-octals

Added new user option tts-strip-octals and associated toggle
dtk-strip-octals
to strip octals chars while speaking.

** emacspeak-keymap.el

Refactored keymaps and key-bindings.
New modules should use emacspeak-keymap-update.

** lisp/atom-blogger.el

Light-weight client for posting/editting blogger.com entries.


Local variables:
 mode: outline
 paragraph-separate: "[ ]*$"
end: